En la Vista /databases de JettraDB mediante JettraFlux ajusta los iconos de la pagina